# midterm

./: .coveragerc  .gitignore  logging.conf  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-app.yml
calculator/: cli.py  command.py  command_input.py  command_output.py  exceptions.py  invoker.py  logging.conf  main.py  setup_env.py  timedeltaprint.py
calculator/commands/add/: add.py  exceptions.py
calculator/commands/divide/: divide.py  exceptions.py
calculator/commands/history/: exceptions.py  history.py  history_clear.py  history_delete.py  history_print.py
calculator/commands/multiply/: exceptions.py  multiply.py
calculator/commands/subtract/: exceptions.py  subtract.py
history/: calculator.history
tests/: conftest.py  test_add_command.py  test_cli.py  test_command.py  test_command_input.py  test_command_output.py  test_division_command.py  test_exceptions.py  test_history.py  test_history_clear.py  test_history_delete.py  test_history_print.py  test_invoker.py  test_main.py  test_multiply_command.py  test_setup.py  test_subtract_command.py  test_timedeltaprint.py
