[project]
name = "calculator"
version = "1.0.0"

[project.entry-points."calculator.commands"]
add_plugin = "calculator.commands.add.add:Add"
subtract_plugin = "calculator.commands.subtract.subtract:Subtract"
multiply_plugin = "calculator.commands.multiply.multiply:Multiply"
division_plugin = "calculator.commands.divide.divide:Divide"
historyprint_plugin = "calculator.commands.history.history_print:HistoryPrint"
historyclear_plugin = "calculator.commands.history.history_clear:HistoryClear"

[project.scripts]
run_calculator = "calculator.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pylint.'MESSAGES CONTROL']
disable = ["unnecessary-ellipsis",
            "unnecessary-pass",
            "logging-fstring-interpolation",
            "duplicate-code",
            "attribute-defined-outside-init"]
